import React from 'react';
import { render } from 'testUtils';
import App1 from '../demos/demo1';
import App2 from '../demos/demo2';
import App3 from '../demos/demo3';
import App4 from '../demos/demo4';

describe('Table', () => {
  it('Table.Array', () => {
    const { container } = render(<App1 />);
    expect(container).toMatchSnapshot();
  });

  it('Table.Void', () => {
    const { container } = render(<App2 />);
    expect(container).toMatchSnapshot();
  });

  it('Table.RowSelection', () => {
    const { container } = render(<App3 />);
    expect(container).toMatchSnapshot();
  });

  it('With Actions', () => {
    const { container } = render(<App4 />);
    expect(container).toMatchSnapshot();
  });
});
